--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,9 @@ jobs:
         python-version: ["3.8", "3.12"]
         django-version: ["3.2", "4.2"]
         backend: ["sqlite", "mysql"]
-        include:
-          - maraidb-version: "10.4"
+        mariadb-version: "10.4"
+        # include:
+        #   - mariadb-version: "10.5"
 
     runs-on: ubuntu-latest
     env:
