--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,10 @@ jobs:
         django-version: ["3.2", "4.2"]
         backend: ["sqlite", "mysql"]
         mariadb-version: ["10.4"]
+        include:
+          - backend: "mysql"
+            mariadb-version: "10.5"
+
     runs-on: ubuntu-latest
     env:
       PYTEST_ADDOPTS: "--maxfail=20"  # Stop testing after too many failures.
