--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,7 @@ jobs:
         python-version: ["3.8", "3.12"]
         django-version: ["3.2", "4.2"]
         backend: ["sqlite", "mysql"]
-        mariadb-version: ["10.4"]
-        include:
-          - backend: "mysql"
-            mariadb-version: "10.5"
+        mariadb-version: ["10.4", "10.5"]
 
     runs-on: ubuntu-latest
     env:
