--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ jobs:
         django-version: ["3.2", "4.2"]
         backend: ["sqlite", "mysql"]
         mariadb-version: ["10.4", "10.5"]
+        exclude:
+          - backend: sqlite
+            mariadb-version: "10.5"
 
     runs-on: ubuntu-latest
     env:
