--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
             mariadb-version: "10.5"
           - backend: "mysql"
             mariadb-version: "10.11"
-    name: "Python ${{ matrix.python-version }} - Django ${{ matrix.django-version }} - ${{ matrix.backend }} (MariaDB ${{ matrix.mariadb-version }})"
+    name: "py${{ matrix.python-version }} - dj${{ matrix.django-version }} - ${{ matrix.backend }} (MariaDB ${{ matrix.mariadb-version }})"
 
     runs-on: ubuntu-latest
     env:
