--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ dependencies = [
     "django-extensions >= 3.1.5",
     "plotly >= 5.11.0",
     "networkx >= 2.8.2",
-    "numpy >= 1.26",
+    "numpy >= 1.26; python_version >= '3.12'",
+    "numpy >= 1.24; python_version < '3.12'",
     "requests",
 ]
 dynamic = ["version"]
