Add debugging step to coverage CI
For some reason, no coverage file is found to upload?

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,7 +112,9 @@ jobs:
           ls -la .coverage*
 
       - name: Combine coverage data
-        run: hatch run cov-combine:combine
+        run: |
+          hatch run cov-combine:combine
+          ls -la .coverage*
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
