--- a/pyproject.toml
+++ b/pyproject.toml
@@ -107,7 +107,7 @@ include = [
 
 [tool.hatch.envs.default]
 dependencies = [
-    "Django >= 3.2,<=5.0",
+    "Django >= 3.2,<=6.0",
     "django-debug-toolbar",
     # Process a .env file for environment variables
     "django-environ",
@@ -170,11 +170,12 @@ DBBACKEND = "sqlite3"
 DBNAME = ":memory:"
 [[tool.hatch.envs.test-sqlite.matrix]]
 python = ["3.8", "3.12"]
-django = ["3.2", "4.2"]
+django = ["3.2", "4.2", "5.0"]
 [tool.hatch.envs.test-sqlite.overrides]
 matrix.django.extra-dependencies = [
     { value = "django ~= 3.2.0", if = ["3.2"] },
     { value = "django ~= 4.2.0", if = ["4.2"] },
+    { value = "django ~= 5.0.0", if = ["5.0"] },
 ]
 
 [tool.hatch.envs.test-mysql]
@@ -186,11 +187,12 @@ extra-dependencies = [
 DBBACKEND = "mysql"
 [[tool.hatch.envs.test-mysql.matrix]]
 python = ["3.8", "3.12"]
-django = ["3.2", "4.2"]
+django = ["3.2", "4.2", "5.0"]
 [tool.hatch.envs.test-mysql.overrides]
 matrix.django.extra-dependencies = [
     { value = "django ~= 3.2.0", if = ["3.2"] },
     { value = "django ~= 4.2.0", if = ["4.2"] },
+    { value = "django ~= 5.0.0", if = ["5.0"] },
 ]
 
 
