--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
 ]
 dependencies = [
-    "Django >= 3.2",
+    "Django >= 4.0",
     "pytz >= 0",
     "crispy-bootstrap5 >= 0.6",
     "django-crispy-forms >= 1.12",
@@ -170,10 +170,9 @@ DBBACKEND = "sqlite3"
 DBNAME = ":memory:"
 [[tool.hatch.envs.test-sqlite.matrix]]
 python = ["3.8", "3.12"]
-django = ["3.2", "4.2", "5.0"]
+django = ["4.2", "5.0"]
 [tool.hatch.envs.test-sqlite.overrides]
 matrix.django.extra-dependencies = [
-    { value = "django ~= 3.2.0", if = ["3.2"] },
     { value = "django ~= 4.2.0", if = ["4.2"] },
     { value = "django ~= 5.0.0", if = ["5.0"] },
 ]
@@ -187,10 +186,9 @@ extra-dependencies = [
 DBBACKEND = "mysql"
 [[tool.hatch.envs.test-mysql.matrix]]
 python = ["3.8", "3.12"]
-django = ["3.2", "4.2", "5.0"]
+django = ["4.2", "5.0"]
 [tool.hatch.envs.test-mysql.overrides]
 matrix.django.extra-dependencies = [
-    { value = "django ~= 3.2.0", if = ["3.2"] },
     { value = "django ~= 4.2.0", if = ["4.2"] },
     { value = "django ~= 5.0.0", if = ["5.0"] },
 ]
