--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,11 +27,11 @@ jobs:
         backend: ["sqlite", "mysql"]
         mariadb-version: ["10.4"]  # What we're currently running with.
         include:
-          - python-version: "3.12"  # Possible future update.
+          - python-version: "3.10"  # Ubuntu 22.04 upgrade.
             django-version: "4.2"
             backend: "mysql"
-            mariadb-version: "10.5"
-          - python-version: "3.12"  # Possible future update.
+            mariadb-version: "10.6"
+          - python-version: "3.12"  # Unbuntu 24.04.01 upgrade.
             django-version: "4.2"
             backend: "mysql"
             mariadb-version: "10.11"
