--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,8 +74,12 @@ jobs:
       - name: Run Tests
         run: hatch run $TEST_ENV:cov
 
+      - name: Rename coverage file
+        run: |
+          ls -la .coverage*
+
       - name: Upload coverage data
-        uses: actions/upload-artifact@v4.3.6
+        uses: actions/upload-artifact@v4.4.0
         with:
           name: coverage-data-${{ strategy.job-index }}
           path: ".coverage.*"
