Pass args to coverage command

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -206,7 +206,7 @@ dependencies = [
 combine = [
     # Clean up old files first.
     "rm -f .coverage",
-    "coverage combine",
+    "python -m coverage combine {args}",
 ]
 report = ["coverage report"]
 html = ["coverage html"]
