--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,12 +77,13 @@ jobs:
       - name: Rename coverage file
         run: |
           ls -la .coverage*
+          mv .coverage.* coverage-${{ strategy.job-index }}
 
       - name: Upload coverage data
         uses: actions/upload-artifact@v4.4.0
         with:
           name: coverage-data-${{ strategy.job-index }}
-          path: ".coverage.*"
+          path: coverage-${{ strategy.job-index }}
           if-no-files-found: error
 
 
@@ -109,14 +110,10 @@ jobs:
         with:
           path: ./artifacts/
 
-      - name: Merge coverage files
-        run: |
-          mv ./artifacts/coverage-data*/.coverage* .
-          ls -la .coverage*
-
       - name: Combine coverage data
         run: |
-          hatch run cov:combine
+          ls -la ./artifacts/coverage-data*
+          hatch run cov:combine ./artifacts/coverage-data*/coverage-*
           ls -la .coverage*
 
       - name: Create coverage xml file
