--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,7 +90,7 @@ exclude_lines = ["@abstractproperty"]
 
 [tool.pytest.ini_options]
 addopts = "--ignore=anvil_consortium_manager/tests/test_app --ds=anvil_consortium_manager.tests.settings.test"
-python_files = ["anvil_consortium_manager/tests/test*.py"]
+python_files = ["anvil_consortium_manager/tests/test*.py", "anvil_consortium_manager/auditor/tests/test*.py"]
 python_classes = ["!TestWorkspaceDataFactory"]
 
 # HATCH
