Use hatch to build docs for readthedocs
Try overriding the build process, so we can use hatch instead of
installing the requirements file.
See docs: https://docs.readthedocs.com/platform/stable/config-file/v2.html#build-jobs-build

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,7 +7,6 @@ build:
   os: ubuntu-20.04
   tools:
     python: "3.9"
-
-python:
-  install:
-    - requirements: docs/requirements.txt
+  build:
+    html:
+      - hatch run docs:build
