--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,6 +7,7 @@ build:
   os: ubuntu-20.04
   tools:
     python: "3.9"
-  build:
-    html:
-      - hatch run docs:build
+  jobs:
+    build:
+      html:
+        - hatch run docs:build
