Try creating the final output directory

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,5 +11,6 @@ build:
     build:
       html:
         - pip install hatch
-        - export SPHINXBUILDDIR=../$READTHEDOCS_OUTPUT
+        - mkdir -p $READTHEDOCS_OUTPUT/html/
+        - export SPHINXBUILDDIR=../$READTHEDOCS_OUTPUT/
         - hatch run docs:build
