Try moving final build files to expected output dir
This is instead of setting an environment variable to specify
where the output should go; it doesn't seem to be respected in CI.

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,5 +12,5 @@ build:
       html:
         - pip install hatch
         - mkdir -p $READTHEDOCS_OUTPUT/html/
-        - export SPHINXBUILDDIR=../$READTHEDOCS_OUTPUT/
         - hatch run docs:build
+        - mv docs/_build/html/* $READTHEDOCS_OUTPUT/html/
