Set name and tag using version

--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -94,6 +94,8 @@ jobs:
       - uses: release-drafter/release-drafter@v6
         with:
           version: ${{ steps.get-version.outputs.version }}
+          tag: ${{ steps.get-version.outputs.version }}
+          name: ${{ steps.get-version.outputs.version }}
         # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
         # with:
         #   config-name: my-config.yml
